--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.383.0",
+    "mysql2": "^3.10.2",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "react": "^18",
