--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.21",
     "@mui/x-data-grid": "^7.8.0",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
